--- a/main.css/style.css
+++ b/main.css/style.css
@@ -1,18 +1,139 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
 
+/* ................................/
+............common css...........  */
 body{
     font-family: 'Poppins', sans-serif;
     background: #FFFFFF;
     font-family: Poppins;
+    padding: 0;
+    margin: 0;
 }
-.banner-title{
-    width: 485px;
-    height: 230px;
-    left: 156px;
-    top: 207px;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 64px;
-    line-height: 80px;
+/* ............................................../
+...........header part style started........... */
+header{
+    background-color: #2D25A0;;
+}
+.banner{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+   
+}
+.banner-title h1{
     color: #FFFFFF;
+    font-size: 64px;
+    margin-left: 38px;
+    margin-top: 100px;
+    margin-bottom: 27px;
 }
+.banner-icon{
+    display: inline-block;
+    font-size: 16px;
+    background-color:#E02C6D;
+    margin-left: 38px;
+    padding: 10px 24px;
+    margin-bottom: 169px;
+}
+.banner-icon a{
+    color: #FFFFFF;
+    text-decoration: none;
+}
+.banner-icon i{
+    color: #FFFFFF;
+    padding-left: 8px;
+}
+
+.banner img{
+    width: 556.01px;
+    height: 438px;
+    margin-top: 60px;
+    margin-right: 140px;
+}
+
+/* .........................................................../
+...................header part style ended.................  */
+
+/* ............................................................./
+.....................main part start.........................  */
+main{
+    display: grid;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 40px;
+}
+/* .............................................................../
+.......................Players Blog part started.................  */
+.container{
+    width: 1090px;
+}
+.players{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 20px;
+    grid-row-gap: 27px;
+}
+.player{
+    width: 330px;
+    height: 474px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+    padding-bottom: 30px;
+}
+.player img{
+    display: block;
+    width: 300px;
+    height: 256px;
+    margin: 14px auto;
+}
+.player-info{
+    padding-left: 14px;
+    padding-right: 14px;
+}
+.player-title{
+    color: #18191F;
+    font-size: 28px;
+    margin-top: 16px;
+    margin-bottom: 10px;
+}
+.player-info p{
+    color: #6C6C6C;
+    font-size: 16px;
+    line-height: 26px;
+    margin-top: 0;
+}
+/* .............................................................../
+..................Players Blog part started....................  */
+
+/* .............................................................../
+..................main part ended............................... */
+
+
+/* .............................................................../
+.....................Footer part started........................ */
+.footer{
+    margin-top: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.footer img{
+    width: 483.87px;
+    height: 110px;
+    display: block;
+    margin: auto;
+}
+.footer-icon{
+    display: flex;
+    justify-content: center;
+    margin-right: 80px;
+}
+.footer p{
+    color: #000000;
+    font-size: 18px;
+    line-height: 24px;
+    margin-right: 50px;
+}
+/* ............................................................../
+......................Footer part Ended........................ */
